--- a/public/css/_floating.scss
+++ b/public/css/_floating.scss
@@ -5,9 +5,11 @@
     border-radius: 20px;
     padding: 10px;
     text-align: center;
+    cursor: pointer;
 }
 .rest{
     left: 20px;
+
 }
 .good{
     background-color: $good-color;
