--- a/public/css/_form.scss
+++ b/public/css/_form.scss
@@ -2,6 +2,7 @@
     width: 50%;
     padding: 20px;
     box-shadow: 0px 2px 10px 0px black;
+    margin-right: 20px;
   
     .label-form{
         font-weight: 700;
