--- a/public/css/_general.scss
+++ b/public/css/_general.scss
@@ -5,20 +5,24 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html{
+    overflow: hidden;
+    height: 100vh;
+}
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 100vh;
+    max-height: 100vh;
     width: 100vw;
+    overflow: auto;
     &::after{
         content: "";
-        background: url("../images/background.jpg") no-repeat;
+        background: url("../images/background.jpg") no-repeat; 
         background-size: cover;
         background-attachment: fixed;
-        background-position: center center;
         opacity:$background-opacity ;
         top: 0;
         left: 0;
@@ -30,13 +34,14 @@ body{
 
     .container{
         background-color: #fff;
-        width: 70%;
+        width: 80%;
+        max-width: 700px;
         max-height: 600px;
         border-radius: 15px;
         padding: 30px;
         box-shadow: 0px 0px 18px 1px black;
         display: flex;
-        margin-top: 70px;
+        margin-top: 200px;
         color:$text-color;
 
         @media(max-width: $max-width){
